--- a/frontend/retiros.html
+++ b/frontend/retiros.html
@@ -885,8 +885,7 @@
                             <span><i class="far fa-calendar"></i> 20-22 de Maio</span>
                             <span><i class="fas fa-map-marker-alt"></i> Casa de Retiros Monte Carmelo</span>
                         </div>
-                        <p>Um fim de semana dedicado ao silêncio, à oração e à contemplação. Uma oportunidade para se
-                            desconectar do mundo e se conectar com Deus.</p>
+                        <p>Uma breve descrição</p>
                         <a href="#" class="btn" style="margin-top: 15px;">Mais Informações</a>
                     </div>
                 </div>
@@ -901,8 +900,7 @@
                             <span><i class="far fa-calendar"></i> 10-12 de Junho</span>
                             <span><i class="fas fa-map-marker-alt"></i> Centro de Espiritualidade São José</span>
                         </div>
-                        <p>Um retiro especial para casais que desejam fortalecer sua relação à luz da fé. Momentos de
-                            partilha, reflexão e renovação do amor conjugal.</p>
+                        <p>Uma breve descrição</p>
                         <a href="#" class="btn" style="margin-top: 15px;">Mais Informações</a>
                     </div>
                 </div>
@@ -917,8 +915,7 @@
                             <span><i class="far fa-calendar"></i> 15-17 de Julho</span>
                             <span><i class="fas fa-map-marker-alt"></i> Acampamento São Francisco</span>
                         </div>
-                        <p>Um retiro dinâmico e envolvente para jovens que buscam aprofundar sua fé através de
-                            atividades, músicas, partilhas e momentos de oração.</p>
+                        <p>Uma breve descrição</p>
                         <a href="#" class="btn" style="margin-top: 15px;">Mais Informações</a>
                     </div>
                 </div>
@@ -933,8 +930,7 @@
                             <span><i class="far fa-calendar"></i> 5-7 de Agosto</span>
                             <span><i class="fas fa-map-marker-alt"></i> Casa de Retiros Divina Misericórdia</span>
                         </div>
-                        <p>Um retiro profundo para quem busca cura emocional e espiritual. Através da oração, do perdão
-                            e da reconciliação, encontre a paz interior.</p>
+                        <p>Uma breve descrição</p>
                         <a href="#" class="btn" style="margin-top: 15px;">Mais Informações</a>
                     </div>
                 </div>
@@ -945,18 +941,13 @@
             <h2 class="section-title"><i class="fas fa-info-circle"></i> Informações Gerais</h2>
             <div class="card">
                 <h3><i class="fas fa-question-circle"></i> Como Participar</h3>
-                <p>Para participar de nossos retiros, entre em contato com a secretaria paroquial ou preencha o
-                    formulário de inscrição disponível para cada evento. As vagas são limitadas e as inscrições devem
-                    ser feitas com antecedência.</p>
+                <p>...</p>
 
                 <h3 style="margin-top: 20px;"><i class="fas fa-hand-holding-heart"></i> Investimento</h3>
-                <p>Os valores dos retiros variam de acordo com a duração e o local. Oferecemos condições especiais para
-                    famílias e casos de dificuldade financeira. Entre em contato para mais informações.</p>
+                <p>...</p>
 
                 <h3 style="margin-top: 20px;"><i class="fas fa-clock"></i> O que Levar</h3>
-                <p>Recomendamos que os participantes tragam: Bíblia, caderno para anotações, roupa de cama e banho
-                    (quando não fornecida), roupas confortáveis, artigos de higiene pessoal e medicamentos de uso
-                    contínuo.</p>
+                <p>...</p>
             </div>
         </section>
     </main>
@@ -979,11 +970,11 @@
                 <div class="footer-section">
                     <h3>Links Rápidos</h3>
                     <ul class="footer-links">
-                        <li><a href="index.html"><i class="fas fa-chevron-right"></i> Início</a></li>
+                         <li><a href="index.html"><i class="fas fa-chevron-right"></i> Início</a></li>
                         <li><a href="missas.html"><i class="fas fa-chevron-right"></i> Missas</a></li>
-                        <li><a href="biblia.html"><i class="fas fa-chevron-right"></i> Bíblia</a></li>
-                        <li><a href="retiros.html"><i class="fas fa-chevron-right"></i> Retiros</a></li>
                         <li><a href="eventos.html"><i class="fas fa-chevron-right"></i> Eventos</a></li>
+                         <li><a href="retiros.html"><i class="fas fa-chevron-right"></i> Retiros</a></li>
+                        <li><a href="biblia.html"><i class="fas fa-chevron-right"></i> Bíblia</a></li>
                         <li><a href="leitura.html"><i class="fas fa-chevron-right"></i> Leitura do Dia</a></li>
                         <li><a href="enciclopedias.html"><i class="fas fa-chevron-right"></i> Enciclopédias</a></li>
                     </ul>
