--- a/frontend/sobre.html
+++ b/frontend/sobre.html
@@ -725,7 +725,7 @@
 </head>
 
 <body>
-<header>
+    <header>
         <div class="container">
             <div class="header-content">
                 <div class="logo">
@@ -763,7 +763,7 @@
                     </div>
                 </div>
             </div>
-           <div class="hero">
+            <div class="hero">
                 <h1>Sobre o Projeto FéTech</h1>
                 <p>Conheça a motivação, objetivos e equipe por trás deste Trabalho de Conclusão de Curso</p>
             </div>
@@ -780,16 +780,14 @@
                 <p>O <strong>FéTech</strong> é um sistema de organização pastoral desenvolvido como Trabalho de
                     Conclusão de Curso (TCC) para o curso de Informática para Internet do Instituto Federal Catarinense.
                 </p>
-                <p>Nosso objetivo principal é criar uma plataforma digital que facilite a gestão e o engajamento das
-                    comunidades religiosas, modernizando processos administrativos e promovendo uma maior integração
-                    entre os membros.</p>
             </div>
 
             <div class="about-section">
                 <h3><i class="fas fa-lightbulb"></i> Motivação</h3>
-                <p>A motivação para este projeto surgiu da observação das dificuldades enfrentadas por comunidades
-                    religiosas na gestão de suas atividades pastorais. Muitas ainda dependem de processos manuais e
-                    planilhas desconexas, o que dificulta a comunicação e organização.</p>
+                <p>A proposta do projeto nasceu da observação das dificuldades encontradas na Paróquia São José Operário
+                    para organizar informações, comunicar decisões e coordenar atividades pastorais. Atualmente, muitos
+                    processos ainda dependem de registros manuais, grupos de mensagens e documentos dispersos, o que
+                    pode dificultar o planejamento e o engajamento dos membros.</p>
                 <p>Buscamos oferecer uma solução tecnológica que:</p>
                 <ul style="margin-left: 20px; margin-top: 10px; color: var(--gray);">
                     <li>Centralize informações da comunidade</li>
@@ -859,8 +857,6 @@
                 <p>Agradecemos ao Instituto Federal Catarinense pela oportunidade de desenvolvimento deste projeto, aos
                     professores orientadores pelo suporte técnico e pedagógico, e à comunidade que inspirou esta
                     solução.</p>
-                <p>Esperamos que o FéTech possa contribuir positivamente para a modernização da gestão pastoral e o
-                    fortalecimento das comunidades religiosas.</p>
             </div>
         </div>
     </main>
@@ -883,10 +879,11 @@
                     <ul class="footer-links">
                         <li><a href="index.html"><i class="fas fa-chevron-right"></i> Início</a></li>
                         <li><a href="missas.html"><i class="fas fa-chevron-right"></i> Missas</a></li>
-                        <li><a href="biblia.html"><i class="fas fa-chevron-right"></i> Bíblia</a></li>
-                        <li><a href="retiros.html"><i class="fas fa-chevron-right"></i> Retiros</a></li>
                         <li><a href="eventos.html"><i class="fas fa-chevron-right"></i> Eventos</a></li>
-                        <li><a href="sobre.html"><i class="fas fa-chevron-right"></i> Sobre</a></li>
+                        <li><a href="retiros.html"><i class="fas fa-chevron-right"></i> Retiros</a></li>
+                        <li><a href="biblia.html"><i class="fas fa-chevron-right"></i> Bíblia</a></li>
+                        <li><a href="leitura.html"><i class="fas fa-chevron-right"></i> Leitura do Dia</a></li>
+                        <li><a href="enciclopedias.html"><i class="fas fa-chevron-right"></i> Enciclopédias</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
