--- a/frontend/ajuda.html
+++ b/frontend/ajuda.html
@@ -707,9 +707,11 @@
         }
 
         body.dark-mode .help-card h3,
-        body.dark-mode .faq-question,
-        body.dark-mode .section-title {
+        body.dark-mode .faq-question {
             color: var(--primary);
+        }
+          body.dark-mode .section-title {
+            color: white;
         }
 
         body.dark-mode .help-card p,
@@ -817,16 +819,16 @@
                             <i class="fas fa-phone"></i>
                             <div class="contact-details">
                                 <div class="contact-type">Telefone Principal</div>
-                                <div class="contact-value">(11) 3456-7890</div>
-                                <div class="contact-hours">Segunda a Sexta, 8h às 18h</div>
+                                <div class="contact-value"></div>
+                                <div class="contact-hours"></div>
                             </div>
                         </li>
                         <li>
                             <i class="fas fa-mobile-alt"></i>
                             <div class="contact-details">
                                 <div class="contact-type">WhatsApp</div>
-                                <div class="contact-value">(11) 98765-4321</div>
-                                <div class="contact-hours">Todos os dias, 7h às 22h</div>
+                                <div class="contact-value"></div>
+                                <div class="contact-hours"></div>
                             </div>
                         </li>
                     </ul>
@@ -840,46 +842,24 @@
                             <i class="fas fa-envelope"></i>
                             <div class="contact-details">
                                 <div class="contact-type">Suporte Técnico</div>
-                                <div class="contact-value">suporte@fétech.org</div>
-                                <div class="contact-hours">Resposta em até 24h</div>
+                                <div class="contact-value"></div>
+                                <div class="contact-hours"></div>
                             </div>
                         </li>
                         <li>
                             <i class="fas fa-users"></i>
                             <div class="contact-details">
                                 <div class="contact-type">Comunidade</div>
-                                <div class="contact-value">comunidade@fétech.org</div>
-                                <div class="contact-hours">Dúvidas sobre uso</div>
+                                <div class="contact-value"></div>
+                                <div class="contact-hours"></div>
                             </div>
                         </li>
                         <li>
                             <i class="fas fa-church"></i>
                             <div class="contact-details">
                                 <div class="contact-type">Pastoral</div>
-                                <div class="contact-value">pastoral@fétech.org</div>
-                                <div class="contact-hours">Conteúdo espiritual</div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="help-card">
-                    <h3><i class="fas fa-map-marker-alt"></i> Atendimento Presencial</h3>
-                    <p>Visite nossa sede para atendimento personalizado.</p>
-                    <ul class="contact-info">
-                        <li>
-                            <i class="fas fa-map-marker-alt"></i>
-                            <div class="contact-details">
-                                <div class="contact-type">Sede FéTech</div>
-                                <div class="contact-value">Av. da Fé, 123 - Centro<br>São Paulo - SP, 01234-567</div>
-                                <div class="contact-hours">Segunda a Sexta, 9h às 17h</div>
-                            </div>
-                        </li>
-                        <li>
-                            <i class="fas fa-subway"></i>
-                            <div class="contact-details">
-                                <div class="contact-type">Como chegar</div>
-                                <div class="contact-value">Metrô Sé - 5min a pé<br>Estacionamento no local</div>
+                                <div class="contact-value"></div>
+                                <div class="contact-hours"></div>
                             </div>
                         </li>
                     </ul>
@@ -1003,12 +983,13 @@
                 <div class="footer-section">
                     <h3>Links Rápidos</h3>
                     <ul class="footer-links">
-                        <li><a href="index.html"><i class="fas fa-chevron-right"></i> Início</a></li>
-                        <li><a href="biblia.html"><i class="fas fa-chevron-right"></i> Bíblia</a></li>
-                        <li><a href="enciclopedias.html"><i class="fas fa-chevron-right"></i> Enciclopédias</a></li>
-                        <li><a href="retiros.html"><i class="fas fa-chevron-right"></i> Retiros</a></li>
+                         <li><a href="index.html"><i class="fas fa-chevron-right"></i> Início</a></li>
+                        <li><a href="missas.html"><i class="fas fa-chevron-right"></i> Missas</a></li>
                         <li><a href="eventos.html"><i class="fas fa-chevron-right"></i> Eventos</a></li>
-                        <li><a href="ajuda.html"><i class="fas fa-chevron-right"></i> Ajuda</a></li>
+                         <li><a href="retiros.html"><i class="fas fa-chevron-right"></i> Retiros</a></li>
+                        <li><a href="biblia.html"><i class="fas fa-chevron-right"></i> Bíblia</a></li>
+                        <li><a href="leitura.html"><i class="fas fa-chevron-right"></i> Leitura do Dia</a></li>
+                        <li><a href="enciclopedias.html"><i class="fas fa-chevron-right"></i> Enciclopédias</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
